Default world flags and separate exp orb checking