@@ -4,9 +4,12 @@ import me.whizvox.infiniplots.command.CommandDelegator;
 import me.whizvox.infiniplots.command.lib.InfiniPlotsCommandDelegator;
 import me.whizvox.infiniplots.compat.worldguard.WorldGuardWrapper;
 import me.whizvox.infiniplots.event.CheckEntityPlotBoundsTask;
+import me.whizvox.infiniplots.event.CheckExperienceOrbsTask;
 import me.whizvox.infiniplots.event.GriefPreventionEventsListener;
+import me.whizvox.infiniplots.flag.FlagValue;
 import me.whizvox.infiniplots.plot.PlotManager;
 import me.whizvox.infiniplots.util.PlotOwnerTiers;
+import me.whizvox.infiniplots.util.ProtectionFlags;
 import me.whizvox.infiniplots.worldgen.PlotWorldGeneratorRegistry;
 import me.whizvox.infiniplots.worldgen.PlotWorldPlainGenerator;
 import org.bukkit.Bukkit;
@@ -18,10 +21,9 @@ import java.io.File;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.logging.Level;
 
 public final class InfiniPlots extends JavaPlugin {
@@ -32,7 +34,9 @@ public final class InfiniPlots extends JavaPlugin {
       CFG_PLOT_OWNER_TIERS = "plotOwnerTiers",
       CFG_DEFAULT_PLOT_WORLD_GENERATOR = "defaultPlotWorldGenerator",
       CFG_CHECK_PLOT_ENTITY_BOUNDS = "checkPlotEntityBounds",
-      CFG_TELEPORT_AFTER_CLAIM = "teleportAfterClaim"/*,
+      CFG_CHECK_EXP_ORBS = "checkExpOrbs",
+      CFG_TELEPORT_AFTER_CLAIM = "teleportAfterClaim",
+      CFG_DEFAULT_WORLD_FLAGS = "defaultWorldFlags"/*,
       CFG_USE_WORLDGUARD = "useWorldGuard"*/;
 
   private static InfiniPlots instance = null;
@@ -44,19 +48,22 @@ public final class InfiniPlots extends JavaPlugin {
   private Connection conn = null;
   private PlotManager plotManager = null;
   private Map<String, Integer> ownerTiers = null;
+  private Map<String, FlagValue> defaultFlags = null;
   private PlotWorldGeneratorRegistry plotGenRegistry = null;
   private ConfirmationManager confirmationManager = null;
   private int checkEntityPlotsTask = -1;
+  private int checkExpOrbsTask = -1;
 
   public PlotManager getPlotManager() {
     return plotManager;
   }
 
   public Map<String, Integer> getOwnerTiers() {
-    if (ownerTiers == null) {
-      return Map.of();
-    }
-    return Collections.unmodifiableMap(ownerTiers);
+    return Objects.requireNonNullElse(ownerTiers, Map.of());
+  }
+
+  public Map<String, FlagValue> getDefaultFlags() {
+    return Objects.requireNonNullElse(defaultFlags, Map.of());
   }
 
   public PlotWorldGeneratorRegistry getPlotGenRegistry() {
@@ -71,6 +78,7 @@ public final class InfiniPlots extends JavaPlugin {
   public void onEnable() {
     instance = this;
     ConfigurationSerialization.registerClass(PlotOwnerTiers.class);
+    ConfigurationSerialization.registerClass(ProtectionFlags.class);
     getDataFolder().mkdirs();
 
     getConfig().addDefault(CFG_DEFAULT_PLOT_WORLD, "world");
@@ -78,7 +86,9 @@ public final class InfiniPlots extends JavaPlugin {
     getConfig().addDefault(CFG_PLOT_OWNER_TIERS, PlotOwnerTiers.DEFAULT);
     getConfig().addDefault(CFG_DEFAULT_PLOT_WORLD_GENERATOR, "plains2");
     getConfig().addDefault(CFG_CHECK_PLOT_ENTITY_BOUNDS, 4);
+    getConfig().addDefault(CFG_CHECK_EXP_ORBS, 0);
     getConfig().addDefault(CFG_TELEPORT_AFTER_CLAIM, false);
+    getConfig().addDefault(CFG_DEFAULT_WORLD_FLAGS, ProtectionFlags.DEFAULT);
     //getConfig().addDefault(CFG_USE_WORLDGUARD, false);
 
     getConfig().options().copyDefaults(true);
@@ -89,19 +99,26 @@ public final class InfiniPlots extends JavaPlugin {
     getConfig().setComments(CFG_DEFAULT_PLOT_WORLD_GENERATOR, List.of("Default plot world generator to be used"));
     getConfig().setComments(CFG_CHECK_PLOT_ENTITY_BOUNDS, List.of(
         "Interval (in ticks) in which entities from plot worlds are removed if they go outside the bounds of a plot",
-        "This is used to prevent griefing and lag from mobile entities that could move outside of their origin plots",
+        "This is used to prevent griefing and lag from mobile entities that could move outside their origin plots",
         "For example: a value of 2 means this is checked every 2 ticks, or 10 times per second",
-        "If a value of 0 is passed, then this check is disabled entirely"
+        "If a value of 0 is passed, then this check is disabled"
+    ));
+    getConfig().setComments(CFG_CHECK_EXP_ORBS, List.of(
+        "Interval (in ticks) in which experience orbs are removed from plot worlds if they are disabled according to",
+        "that world's flags. If the interval is set to 0, the check is disabled. This specifically is to address a",
+        "bug that exists on some servers that doesn't trigger the proper event when an experience orb spawns. If",
+        "experience orbs are spawning despite the world flags disabling them, turn this on."
     ));
     getConfig().setComments(CFG_TELEPORT_AFTER_CLAIM, List.of("After claiming a plot, teleport the owner to it"));
+    getConfig().setComments(CFG_DEFAULT_WORLD_FLAGS, List.of("Default protection flags used for all worlds"));
     /*getConfig().setComments(CFG_USE_WORLDGUARD, List.of(
         "Use WorldGuard regions to handle plot world interactions",
         "If false or if WorldGuard is not loaded, InfiniPlots will use its own event handlers"
     ));*/
     saveConfig();
 
-    ownerTiers = new HashMap<>();
-    ownerTiers.putAll(getConfig().getSerializable(CFG_PLOT_OWNER_TIERS, PlotOwnerTiers.class).tiers);
+    ownerTiers = getConfig().getSerializable(CFG_PLOT_OWNER_TIERS, PlotOwnerTiers.class).tiers;
+    defaultFlags = getConfig().getSerializable(CFG_DEFAULT_WORLD_FLAGS, ProtectionFlags.class).flags;
 
     plotGenRegistry = new PlotWorldGeneratorRegistry();
     for (int i = 1; i <= 4; i++) {
@@ -132,6 +149,13 @@ public final class InfiniPlots extends JavaPlugin {
       getLogger().info("Entity plot bounds checking has been enabled every " + entityCheckInterval + " ticks");
       checkEntityPlotsTask = Bukkit.getScheduler().scheduleSyncRepeatingTask(this, new CheckEntityPlotBoundsTask(), 0, entityCheckInterval);
     }
+    int expOrbCheckInterval = getConfig().getInt(CFG_CHECK_EXP_ORBS);
+    if (expOrbCheckInterval < 1) {
+      getLogger().fine("Experience orb checking has been disabled");
+    } else {
+      getLogger().info("Experience orb checking has been enabled every " + expOrbCheckInterval + " ticks");
+      checkExpOrbsTask = Bukkit.getScheduler().scheduleSyncRepeatingTask(this, new CheckExperienceOrbsTask(), 0, expOrbCheckInterval);
+    }
 
     confirmationManager = new ConfirmationManager();
   }
@@ -149,6 +173,10 @@ public final class InfiniPlots extends JavaPlugin {
     if (checkEntityPlotsTask != -1) {
       Bukkit.getScheduler().cancelTask(checkEntityPlotsTask);
       checkEntityPlotsTask = -1;
+    }
+    if (checkExpOrbsTask != -1) {
+      Bukkit.getScheduler().cancelTask(checkExpOrbsTask);
+      checkExpOrbsTask = -1;
     }
   }
 
